# SQL-Queries

./: .gitignore  Consultas PowerBI.md  Dicionario-Dados.md  Fluxos-Processo.md  NF_Venda_Futura_Com_Pendencias.sql  Padroes-SQL.md  Pedidos.sql  SQL-Queries-PowerBI-Documentacao.md  main.py  pyproject.toml
.claude/: settings.local.json
Consultas/: Script-1.sql  Script-12.sql  Script-3.sql  Script-4.sql  Script-7.sql  Script-8.sql
Histórico Antigo - Scripts/: NFs + Itens Pedido + Pedido + OP.sql  Teste Composição Todas Movimentações.sql  Teste Imagem.sql  Último Balanço.sql
Histórico PC Antigo/: Teste Composição Movimentações.sql  Teste Composição Todas Movimentações.sql
Orçamento Automático/: Cadastro dos Produtos.sql  Composição dos Itens Orçamentos.sql  Orçamento ANL.sql
Power BI/: Balanço Consolidado.sql  Balanços.sql  Cadastro de Produtos.sql  Clientes.sql  Composição das Movimentação.sql  Composição das Movimentações.sql  Composição das OPs.sql  Composição de Produtos.sql  Contas.sql  Desmanche.sql  Detalhamento dos Balanços.sql  Detalhe das OPs.sql  Dias Úteis.sql  Estoque.sql  Etapas de PRodução.sql  Etiqueta das OPs.sql  Finalização.sql  Insumos.sql  Itens do Pedido.sql  Movimentação de Materia Prima.sql  Movimentações v2.sql  Movimentações.sql  Movmentação de Insumos.sql  NFs.sql  OPs Geradas.sql  Pedidos.sql  Saídas de Produção.sql
Scripts/: Consertos.sql  Estudo PreNFMP X PreNFMPFinan.sql  Mapeamento Cadastro IMT.sql  Orçamento ANL.sql  Pedido e NF Venda Futura Associada.sql  Projeto de Compras.sql  Saída e Entradas de Recuperação.sql  Script-1.sql  (+13 more)
(+133 files in other folders)
